<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/dialog_mode_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/mode_add"
        android:textSize="22sp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="22dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/dialog_mode_name"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/layout_theme"
        android:hint="@string/str_name"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintTop_toBottomOf="@+id/dialog_mode_title"/>

    <EditText
        android:id="@+id/dialog_mode_desc"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/layout_theme"
        android:hint="@string/str_desc"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintTop_toBottomOf="@+id/dialog_mode_name"/>

    <TextView
        android:id="@+id/dialog_mode_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/dialog_mode_desc"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="12dp"
        android:text="@string/str_code"/>

    <NumberPicker
        android:id="@+id/dialog_mode_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/layout_theme"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintTop_toBottomOf="@+id/dialog_mode_text"/>

    <TextView
        android:id="@+id/dialog_mode_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_add"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/foreground"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/dialog_mode_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dialog_mode_close"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/dialog_mode_close"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_close"
        android:background="@color/colorAccentDark"
        android:textColor="@color/foreground"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/dialog_mode_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialog_mode_add"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>