<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/dialog_device_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/app_edit"
        android:textSize="22sp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="22dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/dialog_device_delete_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_delete"
        android:textColor="@color/foreground"
        app:layout_constraintEnd_toStartOf="@+id/dialog_device_delete"
        app:layout_constraintTop_toTopOf="@+id/dialog_device_title"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_device_title"/>

    <ImageButton
        android:id="@+id/dialog_device_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete"
        app:layout_constraintTop_toTopOf="@+id/dialog_device_title"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_device_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_delete" />

    <EditText
        android:id="@+id/dialog_device_name"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/layout_theme"
        android:hint="@string/str_name"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintTop_toBottomOf="@+id/dialog_device_title"/>

    <EditText
        android:id="@+id/dialog_device_progress"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/layout_theme"
        android:hint="@string/str_progress"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintTop_toBottomOf="@+id/dialog_device_name"
        android:autofillHints=""
        android:inputType="number" />

    <TextView
        android:id="@+id/dialog_device_create_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/dialog_device_progress"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="12dp"
        android:text="@string/str_create"/>

    <TextView
        android:id="@+id/dialog_device_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/text_bold"
        app:layout_constraintTop_toBottomOf="@+id/dialog_device_create_text"
        app:layout_constraintStart_toStartOf="@+id/dialog_device_create_text"/>

    <TextView
        android:id="@+id/dialog_device_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_done"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/foreground"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/dialog_device_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dialog_device_close"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingVertical="16dp" />

    <TextView
        android:id="@+id/dialog_device_close"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_close"
        android:background="@color/colorAccentDark"
        android:textColor="@color/foreground"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/dialog_device_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialog_device_add"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>