<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="22dp"
    tools:context=".ui.InfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/control_mode_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_background"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/control_mode_code_box">

        <TextView
            android:id="@+id/control_mode_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_mode"
            android:theme="@style/text_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/control_mode_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/control_mode_name_text" />

        <TextView
            android:id="@+id/control_mode_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/control_mode_name_text" />

        <TextView
            android:id="@+id/control_mode_progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_progress"
            android:theme="@style/text_bold"
            android:layout_marginTop="42dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/control_mode_name" />

        <TextView
            android:id="@+id/control_mode_progress_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/control_mode_progress_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            android:text="@string/control_time"/>

        <TextView
            android:id="@+id/control_mode_progress_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/control_mode_progress_time"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            android:text="@string/control_percent"/>

        <com.fireflyest.btcontrol.layout.AnimProgress
            android:id="@+id/control_mode_progress"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/control_mode_progress_time"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressDrawable="@drawable/progress_primary"
            android:progress="0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/control_mode_code_box"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:background="@drawable/round_background"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/control_mode_box"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/control_mode_box"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/control_mode_code_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/text_bold"
            android:text="@string/control_code"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/control_mode_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/control_mode_code_text"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/control_mode_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/text_bold"
            android:text="@string/control_data"
            android:layout_marginTop="42dp"
            app:layout_constraintTop_toBottomOf="@+id/control_mode_code"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/control_mode_code_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/control_mode_time_text"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/control_mode_code_control_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@+id/control_mode_code_control"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <TextView
        android:visibility="gone"
        android:id="@+id/control_mode_record_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/control_mode_box"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="22dp"
        android:layout_marginStart="16dp"
        android:text="@string/control_record"
        android:theme="@style/text_bold"
        android:contentDescription="@string/app_open" />

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/control_mode_record_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/round_background"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/control_mode_record_text"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>