<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/dialog_bluetooth_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/bt_info"
        android:textSize="22sp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="22dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dialog_bluetooth_info"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toTopOf="@+id/dialog_bluetooth_done"
        app:layout_constraintTop_toBottomOf="@+id/dialog_bluetooth_title"/>

    <TextView
        android:id="@+id/dialog_bluetooth_done"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/app_done"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingVertical="16dp" />

    <TextView
        android:id="@+id/dialog_bluetooth_disconnect"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/bt_disconnect"
        android:textColor="@color/colorAccentDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/dialog_bluetooth_done"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteY="264dp" />

</androidx.constraintlayout.widget.ConstraintLayout>