<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/background"
    tools:context=".ConnectActivity">

    <include layout="@layout/toolbar_connect"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/connect_connected_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_white"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">

        <TextView
            android:id="@+id/connect_connected_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/text_bold"
            android:text="@string/connect_connected_name"/>

        <TextView
            android:id="@+id/connect_connected_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/connect_connected_name"
            style="@style/text_bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/connect_connected_list"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="20dp"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/connect_connected_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layoutAnimation="@anim/layout_animation_from_bottom"
            android:text="@string/connect_connected_address"/>

        <ImageButton
            android:id="@+id/connect_connected_refresh"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_refresh"
            android:contentDescription="@string/app_refresh" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/connect_other_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connect_connected_card"
        android:text="@string/connect_other"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/connect_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/connect_other_text"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/connect_bluetooth_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>