<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="22dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ControlFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/control_command_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="22dp"
        android:padding="16dp"
        app:layout_constraintEnd_toStartOf="@+id/control_mode_box"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/round_primary_light">

        <TextView
            android:id="@+id/control_command_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:theme="@style/text_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_command"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_command"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@+id/control_command_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/control_command" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/control_mode_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        app:layout_constraintStart_toEndOf="@+id/control_command_box"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/round_primary_light">

        <TextView
            android:id="@+id/control_mode_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:theme="@style/text_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_mode"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mode"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@+id/control_mode_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/control_mode" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/control_mode_light_auto"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="22dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/circle_primary_light"
        app:layout_constraintTop_toBottomOf="@+id/control_command_box"
        app:layout_constraintStart_toStartOf="@+id/control_command_box" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_int"
            android:theme="@style/text_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="22dp"
        android:background="@drawable/round_primary_light"
        app:layout_constraintTop_toTopOf="@+id/control_mode_light_auto"
        app:layout_constraintBottom_toBottomOf="@+id/control_mode_light_auto"
        app:layout_constraintStart_toEndOf="@+id/control_mode_light_auto"
        app:layout_constraintEnd_toEndOf="parent"/>



<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/control_task_box"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:padding="16dp"-->
<!--        android:layout_marginTop="22dp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/control_command_box"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        android:background="@drawable/round_primary_light">-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            android:theme="@style/text_bold"-->
<!--            android:text="@string/control_task"/>-->

<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>